# uni-app-x-mobile-test

./: .editorconfig  .flaskenv  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  app.test.py  environment.yml  poetry.toml  pyproject.toml  runner.py  starter.py  test.py  uwsgi.ini
aigcserver/: __init__.py
aigcserver/core/: aichat.py  routes.py  viewApis.py  viewFns.py  viewTest.py
aigcserver/tools/: response.py  utils.py
config/: __init__.py  settings.py
env/: .env  .env.production  .env.staging  .env.testing
logs/: log.conf
tests/: aiapp.py  app.py  main.test.py
